# orderbook-aggregator

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build.yml
src/: client.rs  collect_till_first_error.rs  consolidate.rs  lib.rs  ops_ws.rs  publish.rs  server.rs  types.rs
