[package]
name = "orderbook-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", features = ["std", "backtrace"] }
clap = { version = "4.3.21", features = ["derive"] }
futures-util = "0.3.28"
log = "0.4.19"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
tonic = "0.9.2"
tokio-stream = "0.1.14"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"

[dev-dependencies]
mockall = "0.11.4"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
